--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -1,11 +1,12 @@
 .navbar{
     background-color: aliceblue;
     width: 100vw;
-    height: 40px;
+    height: 60px;
+    padding-top: 17px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     font-size: 1.2em;
 }
 
