--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -8,7 +8,7 @@
 }
 
 .induk {
-  width: 100vw;
+  width: 100%;
   height: 70vh;
   display: block;
   position: relative;
@@ -29,7 +29,7 @@
 }
 
 .topDiv {
-   width: 100vw;
+   width: 100%;
    z-index: 100;
    position: absolute;
    display: flex;
