--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -1,13 +1,15 @@
 .navbar{
-    background-color: aliceblue;
-    width: 100vw;
+    background-color: white;
+    width: 100%;
     height: 60px;
-    padding-top: 17px;
+    /* padding-top: 17px; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
-    font-size: 1.2em;
+    align-items: center;
+    /* font-size: 1.4em; */
+    position: fixed;
+    z-index: 100;
 }
 
 .right-bar {
@@ -15,4 +17,29 @@
     justify-content: space-between;
     width: 140px;
     margin-right: 30px;
+}
+
+.btnNav {
+    font-size: 1.2rem;
+    color: #303030; 
+}
+
+.btnNav:focus {
+    color: #303030;
+}
+.btnNav:hover {
+    color: #40a9ff;
+}
+
+.popNav:hover {
+    color: #40a9ff;
+}
+
+.navPopContent span {
+    cursor: pointer;
+}
+
+.navPopContent span:first-child {
+    display: flex;
+    align-items: baseline;
 }
