--- a/client/src/style/team.css
+++ b/client/src/style/team.css
@@ -19,9 +19,9 @@
     margin: 60px 0;
     display: flex;
     flex-direction: column;
-    padding: 0px 200px
+    padding: 0px 150px
 }
 
-@media (max-width: 1285px) {
+/* @media (max-width: 1285px) {
     .teamDiv {}
-}
+} */
