--- a/client/src/style/navbar.css
+++ b/client/src/style/navbar.css
@@ -8,7 +8,7 @@
     justify-content: space-between;
     align-items: center;
     /* font-size: 1.4em; */
-    position: fixed;
+    /* position: fixed; */
     z-index: 100;
     border-bottom: 1px solid burlywood;
 }
@@ -16,7 +16,7 @@
 .right-bar {
     display: flex;
     justify-content: space-between;
-    width: 210px;
+    width: 240px;
     margin-right: 30px;
 }
 
