--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    z-index: 10;
+    /* z-index: 10; */
 }
 
 .induk {
