--- a/client/src/style/why.css
+++ b/client/src/style/why.css
@@ -15,6 +15,14 @@
     font-size: 2vh;
 }
 
+.whyPoint {
+    text-decoration: underline;
+}
+
+.textHilang {
+    text-decoration: underline overline dotted rgba(220, 220, 220, 0.575);
+}
+
 .container {
     width: 100%;
     height: 60%;
