--- a/client/src/style/presetNew.css
+++ b/client/src/style/presetNew.css
@@ -56,12 +56,34 @@
     border-bottom: 1px solid gray;
 }
 
+.bungkusDropDown { 
+    width: 90%;
+    background-color: white;
+    height: 30px;
+    white-space: nowrap;
+    overflow-x: auto;
+    display: none 
+}
+
+.active {
+    background-color: transparent !important;
+    box-shadow: 0px 0px 5px rgb(0, 255, 0) !important;
+    border: transparent !important;
+}
+.theLogo:focus {
+    /* outline: blue !important; */
+    box-shadow: 0px 0px 5px rgb(0, 255, 0) !important;
+}
+.active:focus {
+
+}
+
 @media (max-width: 850px) {
     .theLogo {
         display: none;
     }
-    .dropDownLink {
-        display: block;
+    .bungkusDropDown {
+        display: block !important;
     }
     .showOriginButton{
         width: 20% !important;
