--- a/client/src/style/dashboard.css
+++ b/client/src/style/dashboard.css
@@ -9,29 +9,20 @@
   text-align: center;
 }
 
-.dateText {
-  font-weight: 800;
-  font-size: 2rem;
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-  text-align: center;
-}
-
 .historyText {
   font-size: 1rem;
   margin: auto;
-  width: 50%;
+  width: 40%;
   padding: 10px;
   text-align: center;
 }
 
 .historyList {
-
+  margin-top: 10px;
 }
 
 .articlesList {
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .articleItem {
@@ -44,7 +35,10 @@
 }
 
 .articleDetail {
-  padding: 10px;
+  width: 95%;
+  background: whitesmoke;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 20px;
 }
 
 .emptyPicture {
