--- a/client/src/style/dashboard.css
+++ b/client/src/style/dashboard.css
@@ -39,7 +39,8 @@
   width: 95%;
   background: whitesmoke;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  /* border-radius: 20px; */
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .emptyPicture {
